Add scraper and training pipeline with slimmer lambda package